@@ -1,8 +1,10 @@
 class UsersController < ApplicationController
   before_filter :authenticate_user!
+  respond_to :html, :xml
 
   def index
     user_session[:cart] = "Cart"
+    respond_with(current_user)
   end
 
   def expire
